# vertikal-agent-website

./: .dockerignore  Dockerfile  Dockerfile-livekit  README.md  basit  basit.pub  conversations.db  conversations.db-shm  conversations.db-wal  docker-compose.yml  main.py  pyproject.toml  vertikal_agent.db
data/mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
data/mysql/#innodb_redo/: #ib_redo9
data/mysql/#innodb_temp/: temp_1 2.ibt  temp_1.ibt  temp_10 2.ibt  temp_10.ibt  temp_2 2.ibt  temp_2.ibt  temp_3 2.ibt  temp_3.ibt  temp_4 2.ibt  temp_4.ibt  temp_5 2.ibt  temp_5.ibt  temp_6 2.ibt  temp_6.ibt  temp_7 2.ibt  temp_7.ibt  temp_8 2.ibt  temp_8.ibt  temp_9 2.ibt  temp_9.ibt
data/mysql/mysql/: general_log_213.sdi  (+1 more)
migrations/versions/: 3ba093757de7_.py  c70c410e2efb_.py  de69448c40e1_initial_neon_setup.py
src/: config.py
src/models/: __init__.py  database.py
src/templates/: about.html  add_blog.html  admin_blog_manage.html  admin_dashboard.html  admin_leads.html  admin_login.html  admin_messages.html  admin_user_edit.html  admin_user_new.html  admin_users.html  admin_visitors.html  base.html  blog_detail.html  blog_list.html  contact-us.html  home.html  privacy.html  security.html  solution-conversational-dashboard.html  solution-core-agent.html  solution-custom-agent.html  solution-voice-agent.html  solution-workflow-integration.html  terms.html
src/utils/: seo.py
(+125 files in other folders)
